force-app/main/default/objects/Media_Release_Form__c/Media_Release_Form__c.object-meta.xml
<CustomObject>
    <description>Used for tracking media permissions with the PR &amp; Comms team</description>
    <label>Photo and Multimedia Release Form</label>
    <nameField>
        <displayFormat>MRF-{000}</displayFormat>
        <label>Media Release Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Photo and Multimedia Release Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>