force-app/main/default/objects/Media_Release_Form__c/fields/Additional_Multimedia_Location__c.field-meta.xml
<CustomField>
    <fullName>Additional_Multimedia_Location__c</fullName>
    <inlineHelpText>Please store the url from OneDrive/Sharepoint/Dopbox for any additional photos.</inlineHelpText>
    <label>Additional Multimedia Location</label>
    <type>Url</type>
</CustomField>