force-app/main/default/objects/Media_Release_Form__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Program Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kids’ Camp</fullName>
            </value>
            <value>
                <fullName>Family Camp</fullName>
            </value>
            <value>
                <fullName>Retreat</fullName>
            </value>
            <value>
                <fullName>Fun Day</fullName>
            </value>
            <value>
                <fullName>Family Experience</fullName>
            </value>
            <value>
                <fullName>Puppet Show</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>In Hospital</fullName>
            </value>
            <value>
                <fullName>Camp Quality Events</fullName>
            </value>
            <value>
                <fullName>Community Fundraising Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>