force-app/main/default/objects/Media_Release_Form__c/fields/Associated_Multimedia_Attached__c.field-meta.xml
<CustomField>
    <fullName>Associated_Multimedia_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please ensure you upload the photo/video associated with this permission form.</inlineHelpText>
    <label>Associated Multimedia Attached</label>
    <type>Checkbox</type>
</CustomField>