force-app/main/default/objects/Media_Release_Form__c/fields/Camp_Quality_Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Camp_Quality_Staff_Contact__c</fullName>
    <label>Internal Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>