force-app/main/default/objects/Media_Release_Form__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Created Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>