force-app/main/default/objects/Media_Release_Form__c/fields/First_Name_age_and_region__c.field-meta.xml
<CustomField>
    <fullName>First_Name_age_and_region__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>publication of the first name and age of my child (not surname) and our region/State;</inlineHelpText>
    <label>Publication first name age region</label>
    <type>Checkbox</type>
</CustomField>