force-app/main/default/objects/Media_Release_Form__c/fields/Form_Validated_and_Attached__c.field-meta.xml
<CustomField>
    <fullName>Form_Validated_and_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Validated and Attached</label>
    <type>Checkbox</type>
</CustomField>