force-app/main/default/objects/Media_Release_Form__c/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>photographic and digital images and/or audio and visual recordings of me and/or my children listed below;</inlineHelpText>
    <label>Photographic and Digital Images</label>
    <type>Checkbox</type>
</CustomField>