force-app/main/default/objects/Media_Release_Form__c/fields/Primary_Permission_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Primary_Permission_Purpose__c</fullName>
    <inlineHelpText>Why are we obtaining this permission</inlineHelpText>
    <label>Primary Permission Purpose</label>
    <type>TextArea</type>
</CustomField>