force-app/main/default/objects/Media_Release_Form__c/fields/Sensitive_Information__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>sensitive information about my child, in particular, the type of cancer diagnosis and age at diagnosis</inlineHelpText>
    <label>Sensitive Information</label>
    <type>Checkbox</type>
</CustomField>