force-app/main/default/objects/Media_Release_Form__c/fields/Share_Images_with_Participants__c.field-meta.xml
<CustomField>
    <fullName>Share_Images_with_Participants__c</fullName>
    <inlineHelpText>Whether they are ok with images being shared with participants on the same camp.</inlineHelpText>
    <label>Share Images with Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>